Implement missing companion features: update theme, model Selection lifecycle refresh, local models scanning, and test fixes