@@ -33,12 +33,12 @@ public class ComfyLifecycleService implements IComfyLifecycleService {
     @org.springframework.context.annotation.Lazy
     private de.tki.comfymodels.service.IDownloadManager downloadManager;
 
-    private Process comfyProcess;
+    private volatile Process comfyProcess;
     private final AtomicReference<String> status = new AtomicReference<>("Stopped");
     private final java.util.concurrent.atomic.AtomicBoolean stopping = new java.util.concurrent.atomic.AtomicBoolean(false);
     private final java.util.concurrent.atomic.AtomicBoolean browserLaunched = new java.util.concurrent.atomic.AtomicBoolean(false);
     private final HttpClient httpClient = HttpClient.newBuilder().connectTimeout(Duration.ofMillis(500)).build();
-    private Runnable onBrowserLaunched;
+    private volatile Runnable onBrowserLaunched;
     private final java.util.concurrent.atomic.AtomicBoolean guiLineShown = new java.util.concurrent.atomic.AtomicBoolean(false);
 
     @Override
@@ -53,21 +53,14 @@ public class ComfyLifecycleService implements IComfyLifecycleService {
             return;
         }
 
-        String command = configService.getComfyLaunchCommand();
-        String workingDir = configService.getComfyWorkingDir();
-
-        if (command == null || command.trim().isEmpty()) {
-            status.set("Error: No launch command configured");
-            return;
-        }
-
         try {
             status.set("Starting...");
             guiLineShown.set(false);
             
-            java.util.List<String> commandList = de.tki.comfymodels.util.PlatformUtils.parseCommandLine(command);
+            // Clean any orphaned process using the target port first to prevent port/DB locks
+            killProcessOnPort();
             
-            // Apply active profile arguments if present
+            // Try to resolve the active launch profile
             String activeProfileId = configService.getActiveProfile();
             de.tki.comfymodels.domain.LaunchProfile activeProfile = null;
             if (activeProfileId != null && !activeProfileId.isEmpty()) {
@@ -75,115 +68,91 @@ public class ComfyLifecycleService implements IComfyLifecycleService {
                         .filter(p -> p.id().equals(activeProfileId))
                         .findFirst().orElse(null);
             }
-            if (activeProfile != null && activeProfile.cliArguments() != null) {
-                for (String arg : activeProfile.cliArguments()) {
-                    if (!commandList.contains(arg)) {
-                        commandList.add(arg);
-                    }
+            if (activeProfile == null) {
+                java.util.List<de.tki.comfymodels.domain.LaunchProfile> profiles = profileManager.loadProfiles();
+                if (!profiles.isEmpty()) {
+                    activeProfile = profiles.get(0);
                 }
             }
 
-            boolean hasExtraPathsConfig = false;
-            for (String arg : commandList) {
-                if (arg.equals("--extra-model-paths-config")) {
-                    hasExtraPathsConfig = true;
-                    break;
-                }
-            }
-            if (!hasExtraPathsConfig) {
+            if (activeProfile != null) {
                 String comfyPath = configService.getComfyUIPath();
-                if (comfyPath != null && !comfyPath.isEmpty()) {
-                    java.io.File extraPathsFile = new java.io.File(comfyPath, "extra_model_paths.yaml");
-                    if (extraPathsFile.exists()) {
-                        commandList.add("--extra-model-paths-config");
-                        commandList.add(extraPathsFile.getAbsolutePath());
-                    }
-                }
-            }
-
-            System.out.println("🚀 [Lifecycle] Starting command: " + String.join(" ", commandList));
-            if (workingDir != null) System.out.println("📁 [Lifecycle] In directory: " + workingDir);
-
-            ProcessBuilder pb = new ProcessBuilder(commandList);
-            if (workingDir != null && !workingDir.isEmpty()) {
-                pb.directory(new File(workingDir));
-            }
-            pb.redirectErrorStream(true);
-
-            // Fix buffering and terminal environment setup
-            pb.environment().put("PYTHONUNBUFFERED", "1");
-            pb.environment().put("PYTHONIOENCODING", "utf-8");
-            pb.environment().put("TERM", "dumb");
-            pb.environment().put("COLUMNS", "120");
-            if (activeProfile != null && activeProfile.envVars() != null) {
-                pb.environment().putAll(activeProfile.envVars());
-            }
-
-            comfyProcess = pb.start();
-
-            // Consume output and check for GUI line
-            new Thread(() -> {
-                try (java.io.BufferedReader reader = new java.io.BufferedReader(new java.io.InputStreamReader(comfyProcess.getInputStream(), java.nio.charset.StandardCharsets.UTF_8))) {
-                    String line;
-                    while ((line = reader.readLine()) != null) {
-                        if (line.contains("To see the GUI go to:")) {
-                            guiLineShown.set(true);
-                        }
-                    }
+                String pythonPath = configService.getPythonPath();
+                
+                System.out.println("🚀 [Lifecycle] Starting ComfyUI via processController with profile: " + activeProfile.name());
+                
+                java.io.File logFile = new java.io.File("comfyui.log");
+                try {
+                    // Truncate/create log file
+                    java.nio.file.Files.writeString(logFile.toPath(), "", java.nio.charset.StandardCharsets.UTF_8);
                 } catch (java.io.IOException ignored) {}
-            }).start();
 
-            // Monitor for readiness and launch browser
-            new Thread(() -> {
-                try { Thread.sleep(3000); } catch (InterruptedException ignored) {}
-                boolean launched = false;
-                while (!launched && isRunning()) {
-                    if (isHealthy()) {
-                        String url = configService.getComfyUIUrl();
-                        if (browserLaunched.compareAndSet(false, true)) {
-                            System.out.println("🌐 [Lifecycle] Health check passed. Launching browser: " + url);
-                            try {
-                                if (java.awt.Desktop.isDesktopSupported() && java.awt.Desktop.getDesktop().isSupported(java.awt.Desktop.Action.BROWSE)) {
-                                    java.awt.Desktop.getDesktop().browse(new java.net.URI(url));
-                                } else {
-                                    String cmd = de.tki.comfymodels.util.PlatformUtils.isWindows() ? "cmd /c start " + url : "xdg-open " + url;
-                                    System.out.println("🌐 [Lifecycle] Desktop API not supported. Executing: " + cmd);
-                                    Process p = Runtime.getRuntime().exec(cmd);
-                                    if (p.waitFor() != 0) {
-                                        System.err.println("⚠️ [Lifecycle] Browser launch process failed with exit code: " + p.exitValue());
+                final de.tki.comfymodels.domain.LaunchProfile finalProfile = activeProfile;
+                processController.start(finalProfile, java.nio.file.Paths.get(comfyPath), pythonPath, log -> {
+                    if (log.contains("To see the GUI go to:")) {
+                        guiLineShown.set(true);
+                    }
+                    // Append log to comfyui.log
+                    try {
+                        java.nio.file.Files.writeString(
+                            logFile.toPath(), 
+                            log + "\n", 
+                            java.nio.charset.StandardCharsets.UTF_8, 
+                            java.nio.file.StandardOpenOption.CREATE, 
+                            java.nio.file.StandardOpenOption.APPEND
+                        );
+                    } catch (java.io.IOException ignored) {}
+                }).thenAccept(exitCode -> {
+                    status.set("Stopped (Exit Code: " + exitCode + ")");
+                });
+
+                // Monitor for readiness and launch browser
+                new Thread(() -> {
+                    try { Thread.sleep(3000); } catch (InterruptedException ignored) {}
+                    boolean launched = false;
+                    while (!launched && isRunning()) {
+                        if (isHealthy()) {
+                            String url = configService.getComfyUIUrl();
+                            if (browserLaunched.compareAndSet(false, true)) {
+                                System.out.println("🌐 [Lifecycle] Health check passed. Launching browser: " + url);
+                                try {
+                                    if (java.awt.Desktop.isDesktopSupported() && java.awt.Desktop.getDesktop().isSupported(java.awt.Desktop.Action.BROWSE)) {
+                                        java.awt.Desktop.getDesktop().browse(new java.net.URI(url));
+                                    } else {
+                                        String cmd = de.tki.comfymodels.util.PlatformUtils.isWindows() ? "cmd /c start " + url : "xdg-open " + url;
+                                        System.out.println("🌐 [Lifecycle] Desktop API not supported. Executing: " + cmd);
+                                        Process p = Runtime.getRuntime().exec(cmd);
+                                        if (p.waitFor() != 0) {
+                                            System.err.println("⚠️ [Lifecycle] Browser launch process failed with exit code: " + p.exitValue());
+                                        }
                                     }
+                                    if (onBrowserLaunched != null) {
+                                        onBrowserLaunched.run();
+                                    }
+                                } catch (Exception e) {
+                                    System.err.println("❌ [Lifecycle] Failed to open browser: " + e.getMessage());
+                                    e.printStackTrace();
                                 }
+                            } else {
+                                System.out.println("🌐 [Lifecycle] Health check passed. Browser already launched during this application run.");
                                 if (onBrowserLaunched != null) {
                                     onBrowserLaunched.run();
                                 }
-                            } catch (Exception e) {
-                                System.err.println("❌ [Lifecycle] Failed to open browser: " + e.getMessage());
-                                e.printStackTrace();
                             }
-                        } else {
-                            System.out.println("🌐 [Lifecycle] Health check passed. Browser already launched during this application run.");
+                            launched = true;
+                            triggerBrowserRefresh();
                         }
-                        launched = true;
-                        triggerBrowserRefresh();
+                        try { Thread.sleep(2000); } catch (InterruptedException e) { break; }
                     }
-                    try { Thread.sleep(2000); } catch (InterruptedException e) { break; }
-                }
-            }).start();
-            status.set("Running (PID: " + comfyProcess.pid() + ")");
-            
-            // Background thread to wait for exit
-            new Thread(() -> {
-                try {
-                    int exitCode = comfyProcess.waitFor();
-                    status.set("Stopped (Exit Code: " + exitCode + ")");
-                    comfyProcess = null;
-                } catch (InterruptedException e) {
-                    Thread.currentThread().interrupt();
-                }
-            }).start();
+                }).start();
 
-        } catch (IOException e) {
+                status.set("Running (via Controller)");
+            } else {
+                status.set("Error: No launch profile found to start ComfyUI.");
+            }
+        } catch (Exception e) {
             status.set("Error: " + e.getMessage());
+            e.printStackTrace();
         }
     }
 
@@ -201,10 +170,11 @@ public class ComfyLifecycleService implements IComfyLifecycleService {
                 try {
                     comfyProcess.descendants().forEach(ProcessHandle::destroyForcibly);
                     comfyProcess.destroyForcibly();
-                    comfyProcess.waitFor();
+                    comfyProcess.waitFor(5, java.util.concurrent.TimeUnit.SECONDS);
                 } catch (Exception ignored) {}
                 comfyProcess = null;
             }
+            browserLaunched.set(false);
 
             // 2. Kill the other controller if running
             try {
@@ -214,9 +184,7 @@ public class ComfyLifecycleService implements IComfyLifecycleService {
             }
 
             // 3. Kill by port fallback (for external/orphaned instances)
-            if (isHealthy()) {
-                killProcessOnPort();
-            }
+            killProcessOnPort();
             
             status.set("Stopped");
         } finally {
@@ -238,23 +206,35 @@ public class ComfyLifecycleService implements IComfyLifecycleService {
                 try (java.io.BufferedReader reader = new java.io.BufferedReader(new java.io.InputStreamReader(p.getInputStream(), java.nio.charset.StandardCharsets.UTF_8))) {
                     String line;
                     while ((line = reader.readLine()) != null) {
-                        if (line.contains("LISTENING")) {
+                        String upper = line.toUpperCase();
+                        if (upper.contains("LISTENING") || upper.contains("ABH") || upper.contains("ESCUCHANDO") || upper.contains("L'ECOUTE") || line.contains("0.0.0.0:0") || line.contains("[::]:0")) {
                             String[] parts = line.trim().split("\\s+");
                             if (parts.length > 0) {
-                                long pid = Long.parseLong(parts[parts.length - 1]);
-                                if (pid != ProcessHandle.current().pid()) {
-                                    ProcessHandle.of(pid).ifPresent(ProcessHandle::destroyForcibly);
-                                    System.out.println("💀 Killed process " + pid + " listening on port " + port);
-                                    break;
-                                }
+                                try {
+                                    long pid = Long.parseLong(parts[parts.length - 1]);
+                                    if (pid != ProcessHandle.current().pid() && pid > 0) {
+                                        ProcessHandle.of(pid).ifPresent(ProcessHandle::destroyForcibly);
+                                        try {
+                                            Runtime.getRuntime().exec("taskkill /F /PID " + pid + " /T");
+                                        } catch (Exception ignored) {}
+                                        System.out.println("💀 Killed process " + pid + " listening on port " + port);
+                                    }
+                                } catch (NumberFormatException ignored) {}
                             }
                         }
                     }
                 }
+                // ALSO KILL WSL INSTANCES RUNNING ON PORT OR main.py
+                try {
+                    Runtime.getRuntime().exec(new String[]{"wsl", "pkill", "-f", "main.py"});
+                    Runtime.getRuntime().exec(new String[]{"wsl", "fuser", "-k", port + "/tcp"});
+                } catch (Exception ignored) {}
             } else {
                 // Linux/Mac fallback
-                Runtime.getRuntime().exec("sh -c fuser -k " + port + "/tcp");
+                Runtime.getRuntime().exec(new String[]{"sh", "-c", "fuser -k " + port + "/tcp"});
             }
+            // Sleep a small duration to allow OS to release port & file locks
+            try { Thread.sleep(1000); } catch (InterruptedException ignored) {}
         } catch (Exception e) {
             System.err.println("Failed to kill process on port: " + e.getMessage());
         }
